--- a/client/public/index.html
+++ b/client/public/index.html
@@ -14,6 +14,7 @@
 </noscript>
 <div id="app"></div>
 <!-- built files will be auto injected -->
+<script rel="script" src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
 <script rel="script" src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.js"></script>
 </body>
 </html>
